@@ -23,7 +23,8 @@
         <maven.deploy.version>2.8.2</maven.deploy.version>
         <maven.source.version>3.0.1</maven.source.version>
         <maven.compiler.version>3.8.0</maven.compiler.version>
-        <maven.surefire.version>2.12.4</maven.surefire.version>
+        <maven.surefire.version>2.22.0</maven.surefire.version>
+        <maven.failsafe.version>2.22.0</maven.failsafe.version>
         <maven.resources.version>3.1.0</maven.resources.version>
         <maven.release.version>2.5.3</maven.release.version>
         <maven.versions.version>2.5</maven.versions.version>
@@ -34,7 +35,7 @@
         <license.dir>${basedir}</license.dir>
 
         <jackson.version>2.9.6</jackson.version>
-        <fastclasspath.version>4.2.2</fastclasspath.version>
+        <fastclasspath.version>4.2.3</fastclasspath.version>
         <guice.version>4.2.0</guice.version>
         <sonarqube.version>3.3.0.603</sonarqube.version>
         <jacoco.version>0.7.9</jacoco.version>
@@ -738,12 +739,6 @@
 
             <dependency>
                 <groupId>com.hazelcast</groupId>
-                <artifactId>hazelcast</artifactId>
-                <version>${hazelcast.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.hazelcast</groupId>
                 <artifactId>hazelcast-all</artifactId>
                 <version>${hazelcast.version}</version>
                 <type>jar</type>
@@ -790,12 +785,6 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacoco.version}</version>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>${maven.dependency.version}</version>
             </plugin>
 
             <plugin>
@@ -1163,6 +1152,9 @@
                         <version>${maven.surefire.version}</version>
                         <configuration>
                             <skipTests>true</skipTests>
+                            <argLine>
+                                --illegal-access=permit
+                            </argLine>
                         </configuration>
                     </plugin>
 
@@ -1213,6 +1205,125 @@
                 <resources>
                     <resource>
                         <directory>src/jre10/resources</directory>
+                        <excludes>
+                            <exclude>.gitignore</exclude>
+                        </excludes>
+                    </resource>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <excludes>
+                            <exclude>.gitignore</exclude>
+                        </excludes>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+
+        <profile>
+            <id>jdk11</id>
+            <properties>
+                <jdk.version>1.11</jdk.version>
+                <maven.compiler.source>1.11</maven.compiler.source>
+                <maven.compiler.target>1.11</maven.compiler.target>
+                <maven.compiler.release>11</maven.compiler.release>
+                <jwebmp.runtime.classifier></jwebmp.runtime.classifier>
+            </properties>
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>javax.transaction</groupId>
+                        <artifactId>javax.transaction-api</artifactId>
+                        <version>${javax.transaction.transactionapi}</version>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>${maven.compiler.version}</version>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.ow2.asm</groupId>
+                                <artifactId>asm</artifactId>
+                                <version>6.2</version> <!-- Use newer version of ASM -->
+                            </dependency>
+                        </dependencies>
+                        <configuration>
+                            <release>11</release>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jar-plugin</artifactId>
+                        <configuration>
+                            <classifier>${jwebmp.runtime.classifier}</classifier>
+                        </configuration>
+                        <version>${maven.jar.version}</version>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.version}</version>
+                        <configuration>
+                            <skipTests>true</skipTests>
+                            <argLine>
+                                --illegal-access=permit
+                            </argLine>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>${maven.source.version}</version>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>${maven.javadoc.version}</version>
+                        <configuration>
+                            <detectJavaApiLink>false</detectJavaApiLink>
+                            <offlineLinks>
+                                <offlineLink>
+                                    <url>https://docs.oracle.com/javase/${maven.compiler.release}/docs/api/</url>
+                                    <location>${project.basedir}</location>
+                                </offlineLink>
+                            </offlineLinks>
+                            <failOnError>false</failOnError>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>build-helper-maven-plugin</artifactId>
+                        <version>${build.helper.maven.plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>add-source</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>add-source</goal>
+                                </goals>
+                                <configuration>
+                                    <sources>
+                                        <source>src/main/java</source>
+                                        <source>src/jre11/java</source>
+                                        <source>src/jre10/java</source>
+                                    </sources>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+
+                <resources>
+                    <resource>
+                        <directory>src/jre11/resources</directory>
                         <excludes>
                             <exclude>.gitignore</exclude>
                         </excludes>
